--- a/config.yaml
+++ b/config.yaml
@@ -14,27 +14,45 @@ spec:
         app: emailservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/emailservice
-          ports:
-            - containerPort: 8080
-          env:
-            - name: PORT
-              value: "8080"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/emailservice:v0.2.3
+        ports:
+        - containerPort: 8080
+        env:
+        - name: PORT
+          value: "8080"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:8080"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:8080"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: emailservice
 spec:
+  type: ClusterIP
   selector:
     app: emailservice
   ports:
-    - protocol: TCP
-      port: 5000
-      targetPort: 8080
-
+  - protocol: TCP
+    port: 5000
+    targetPort: 8080
 
 ---
 apiVersion: apps/v1
@@ -52,67 +70,47 @@ spec:
         app: recommendationservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/recommendationservice
-          ports:
-            - containerPort: 8080
-          env:
-            - name: PORT
-              value: "8080"
-            - name: PRODUCT_CATALOG_SERVICE_ADDR
-              value: "productcatalogservice:3550"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.3
+        ports:
+        - containerPort: 8080
+        env:
+        - name: PORT
+          value: "8080"
+        - name: PRODUCT_CATALOG_SERVICE_ADDR
+          value: "productcatalogservice:3550"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:8080"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:8080"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: recommendationservice
 spec:
+  type: ClusterIP
   selector:
     app: recommendationservice
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 8080
-
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: productcatalogservice
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: productcatalogservice
-  template:
-    metadata:
-      labels:
-        app: productcatalogservice
-    spec:
-      containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/productcatalogservice
-          ports:
-            - containerPort: 3550
-          env:
-            - name: PORT
-              value: "3550"
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: productcatalogservice
-spec:
-  selector:
-    app: productcatalogservice
-  ports:
-    - protocol: TCP
-      port: 3550
-      targetPort: 3550
-
+  - protocol: TCP
+    port: 8080
+    targetPort: 8080
 
 ---
 apiVersion: apps/v1
@@ -130,27 +128,101 @@ spec:
         app: paymentservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/paymentservice
-          ports:
-            - containerPort: 50051
-          env:
-            - name: PORT
-              value: "50051"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.2.3
+        ports:
+        - containerPort: 50051
+        env:
+        - name: PORT
+          value: "50051"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:50051"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:50051"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: paymentservice
 spec:
+  type: ClusterIP
   selector:
     app: paymentservice
   ports:
-    - protocol: TCP
-      port: 50051
-      targetPort: 50051
+  - protocol: TCP
+    port: 50051
+    targetPort: 50051
 
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: productcatalogservice
+spec:
+  selector:
+    replicas: 3
+    matchLabels:
+      app: productcatalogservice
+  template:
+    metadata:
+      labels:
+        app: productcatalogservice
+    spec:
+      containers:
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.2.3
+        ports:
+        - containerPort: 3550
+        env:
+        - name: PORT
+          value: "3550"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:3550"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:3550"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: productcatalogservice
+spec:
+  type: ClusterIP
+  selector:
+    app: productcatalogservice
+  ports:
+  - protocol: TCP
+    port: 3550
+    targetPort: 3550
 
 ---
 apiVersion: apps/v1
@@ -158,8 +230,8 @@ kind: Deployment
 metadata:
   name: currencyservice
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: currencyservice
   template:
@@ -168,27 +240,45 @@ spec:
         app: currencyservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/currencyservice
-          ports:
-            - containerPort: 7000
-          env:
-            - name: PORT
-              value: "7000"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.2.3
+        ports:
+        - containerPort: 7000
+        env:
+        - name: PORT
+          value: "7000"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:7000"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:7000"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: currencyservice
 spec:
+  type: ClusterIP
   selector:
     app: currencyservice
   ports:
-    - protocol: TCP
-      port: 7000
-      targetPort: 7000
-
+  - protocol: TCP
+    port: 7000
+    targetPort: 7000
 
 ---
 apiVersion: apps/v1
@@ -196,8 +286,8 @@ kind: Deployment
 metadata:
   name: shippingservice
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: shippingservice
   template:
@@ -206,27 +296,45 @@ spec:
         app: shippingservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/shippingservice
-          ports:
-            - containerPort: 50051
-          env:
-            - name: PORT
-              value: "50051"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/shippingservice:v0.2.3
+        ports:
+        - containerPort: 50051
+        env:
+        - name: PORT
+          value: "50051"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:50051"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:50051"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: shippingservice
 spec:
+  type: ClusterIP
   selector:
     app: shippingservice
   ports:
-    - protocol: TCP
-      port: 50051
-      targetPort: 50051
-
+  - protocol: TCP
+    port: 50051
+    targetPort: 50051
 
 ---
 apiVersion: apps/v1
@@ -234,8 +342,8 @@ kind: Deployment
 metadata:
   name: adservice
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: adservice
   template:
@@ -244,27 +352,45 @@ spec:
         app: adservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/adservice
-          ports:
-            - containerPort: 9555
-          env:
-            - name: PORT
-              value: "9555"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/adservice:v0.2.3
+        ports:
+        - containerPort: 9555
+        env:
+        - name: PORT
+          value: "9555"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:9555"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:9555"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: adservice
 spec:
+  type: ClusterIP
   selector:
     app: adservice
   ports:
-    - protocol: TCP
-      port: 9555
-      targetPort: 9555
-
+  - protocol: TCP
+    port: 9555
+    targetPort: 9555
 
 ---
 apiVersion: apps/v1
@@ -272,8 +398,8 @@ kind: Deployment
 metadata:
   name: cartservice
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: cartservice
   template:
@@ -282,71 +408,45 @@ spec:
         app: cartservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/cartservice
-          ports:
-            - containerPort: 7070
-          env:
-            - name: ENV_VAR_NAME
-              value: "7070"
-            - name: REDIS_ADDR
-              value: "redis-cart:6379"
-
+      - name: server
+        image: gcr.io/google-samples/microservices-demo/cartservice:v0.2.3
+        ports:
+        - containerPort: 7070
+        env:
+        - name: REDIS_ADDR
+          value: "redis-cart:6379"
+        - name: DISABLE_PROFILER
+          value: "1"
+        - name: DISABLE_DEBUGGER
+          value: "1"
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:7070"]
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "--addr=:7070"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: cartservice
 spec:
+  type: ClusterIP
   selector:
     app: cartservice
   ports:
-    - protocol: TCP
-      port: 7070
-      targetPort: 7070
-
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: redis-cart
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: redis-cart
-  template:
-    metadata:
-      labels:
-        app: redis-cart
-    spec:
-      containers:
-        - name: redis
-          image: redis:alpine
-          ports:
-            - containerPort: 6379
-          volumeMounts:
-          - name: redis-data
-            mountPath: /data
-      volumes:
-      - name: redis-data
-        emptyDir: {}
-
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis-cart
-spec:
-  selector:
-    app: redis-cart
-  ports:
-    - protocol: TCP
-      port: 6379
-      targetPort: 6379
-
+  - protocol: TCP
+    port: 7070
+    targetPort: 7070
 
 ---
 apiVersion: apps/v1
@@ -354,8 +454,8 @@ kind: Deployment
 metadata:
   name: checkoutservice
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: checkoutservice
   template:
@@ -364,39 +464,58 @@ spec:
         app: checkoutservice
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/checkoutservice
+        - name: server
+          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.2.3
           ports:
-            - containerPort: 5050
+          - containerPort: 5050
           env:
-            - name: PORT
-              value: "5050"
-            - name: PRODUCT_CATALOG_SERVICE_ADDR
-              value: "productcatalogservice:3550"
-            - name: SHIPPING_SERVICE_ADDR
-              value: "shippingservice:50051"
-            - name: PAYMENT_SERVICE_ADDR
-              value: "paymentservice:50051"
-            - name: EMAIL_SERVICE_ADDR
-              value: "emailservice:5000"
-            - name: CURRENCY_SERVICE_ADDR
-              value: "currencyservice:7000"
-            - name: CART_SERVICE_ADDR
-              value: "cartservice:7070"
-
+          - name: PORT
+            value: "5050"
+          - name: PRODUCT_CATALOG_SERVICE_ADDR
+            value: "productcatalogservice:3550"
+          - name: SHIPPING_SERVICE_ADDR
+            value: "shippingservice:50051"
+          - name: PAYMENT_SERVICE_ADDR
+            value: "paymentservice:50051"
+          - name: EMAIL_SERVICE_ADDR
+            value: "emailservice:5000"
+          - name: CURRENCY_SERVICE_ADDR
+            value: "currencyservice:7000"
+          - name: CART_SERVICE_ADDR
+            value: "cartservice:7070"
+          - name: DISABLE_PROFILER
+            value: "1"
+          - name: DISABLE_DEBUGGER
+            value: "1"
+          livenessProbe:
+            periodSeconds: 5
+            httpGet:
+              path: /health
+              port: 3550
+          readinessProbe:
+            periodSeconds: 5
+            exec:
+              command: ["/bin/grpc_health_probe", "--addr=:5050"]
+          resources:
+            requests:
+              cpu: 100m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: checkoutservice
 spec:
+  type: ClusterIP
   selector:
     app: checkoutservice
   ports:
-    - protocol: TCP
-      port: 5050
-      targetPort: 5050
-
+  - protocol: TCP
+    port: 5050
+    targetPort: 5050
 
 ---
 apiVersion: apps/v1
@@ -404,8 +523,8 @@ kind: Deployment
 metadata:
   name: frontend
 spec:
-  replicas: 3
   selector:
+    replicas: 3
     matchLabels:
       app: frontend
   template:
@@ -414,39 +533,126 @@ spec:
         app: frontend
     spec:
       containers:
-        - name: service
-          image: gcr.io/google-samples/microservices-demo/frontend
+        - name: server
+          image: gcr.io/google-samples/microservices-demo/frontend:v0.2.3
           ports:
-            - containerPort: 8080
+          - containerPort: 8080
           env:
-            - name: PORT
-              value: "8080"
-            - name: PRODUCT_CATALOG_SERVICE_ADDR
-              value: "productcatalogservice:3550"
-            - name: SHIPPING_SERVICE_ADDR
-              value: "shippingservice:50051"
-            - name: CHECKOUT_SERVICE_ADDR
-              value: "checkoutservice:5050"
-            - name: RECOMMENDATION_SERVICE_ADDR
-              value: "recommendationservice:8080"
-            - name: CURRENCY_SERVICE_ADDR
-              value: "currencyservice:7000"
-            - name: CART_SERVICE_ADDR
-              value: "cartservice:7070"
-            - name: AD_SERVICE_ADDR
-              value: "adservice:9555"
-
+          - name: PORT
+            value: "8080"
+          - name: PRODUCT_CATALOG_SERVICE_ADDR
+            value: "productcatalogservice:3550"
+          - name: CURRENCY_SERVICE_ADDR
+            value: "currencyservice:7000"
+          - name: CART_SERVICE_ADDR
+            value: "cartservice:7070"
+          - name: RECOMMENDATION_SERVICE_ADDR
+            value: "recommendationservice:8080"
+          - name: SHIPPING_SERVICE_ADDR
+            value: "shippingservice:50051"
+          - name: CHECKOUT_SERVICE_ADDR
+            value: "checkoutservice:5050"
+          - name: AD_SERVICE_ADDR
+            value: "adservice:9555"
+          - name: DISABLE_PROFILER
+            value: "1"
+          - name: DISABLE_DEBUGGER
+            value: "1"
+          livenessProbe:
+            periodSeconds: 5
+            exec:
+              command: ["/bin/grpc_health_probe", "--addr=:8080"]
+          readinessProbe:
+            periodSeconds: 5
+            exec:
+              command: ["/bin/grpc_health_probe", "--addr=:8080"]
+          resources:
+            requests:
+              cpu: 100m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: frontend
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
-      nodePort: 30007
+  - name: http
+    port: 80
+    targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-external
+spec:
+  type: LoadBalancer
+  selector:
+    app: frontend
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8080
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis-cart
+spec:
+  selector:
+    replicas: 3
+    matchLabels:
+      app: redis-cart
+  template:
+    metadata:
+      labels:
+        app: redis-cart
+    spec:
+      containers:
+      - name: redis
+        image: redis:alpine
+        ports:
+        - containerPort: 6379
+        livenessProbe:
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          tcpSocket:
+            port: 6379
+        readinessProbe:
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          tcpSocket:
+            port: 6379
+        resources:
+          requests:
+            cpu: 70m
+            memory: 200Mi
+          limits:
+            cpu: 125m
+            memory: 300Mi
+        volumeMounts:
+        - mountPath: /data
+          name: redis-data
+      volumes:
+      - name: redis-data
+        emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-cart
+spec:
+  type: ClusterIP
+  selector:
+    app: redis-cart
+  ports:
+  - name: redis
+    port: 6379
+    targetPort: 6379
